# sqlgen

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  sqlgen-config.cmake.in  vcpkg.json
tests/duckdb/: CMakeLists.txt  test_aggregations.cpp  test_aggregations_with_nullable.cpp  test_alpha_numeric.cpp  test_alpha_numeric_query.cpp  test_auto_incr_primary_key.cpp  test_boolean.cpp  test_boolean_conditions.cpp  test_boolean_update.cpp  test_cache.cpp  test_create_index.cpp  test_create_table.cpp  test_create_table_as.cpp  test_create_view_as.cpp  test_delete_from.cpp  test_drop.cpp  test_dynamic_type.cpp  test_enum_crosstable.cpp  test_enum_lookup.cpp  test_enum_namespace.cpp  test_error_handling.cpp  test_flatten.cpp  test_foreign_key.cpp  test_full_join.cpp  test_group_by.cpp  test_group_by_with_operations.cpp  test_hello_world.cpp  test_in.cpp  test_in_vec.cpp  test_insert_and_read.cpp  test_insert_by_ref_and_read.cpp  test_insert_fail.cpp  test_insert_or_replace.cpp  test_insert_returning_ids.cpp  test_is_null.cpp  test_join.cpp  test_joins_from.cpp  test_joins_nested.cpp  test_joins_nested_grouped.cpp  test_joins_two_tables.cpp  (+44 more)
tests/mysql/: CMakeLists.txt  test_aggregations.cpp  test_aggregations_with_nullable.cpp  test_auto_incr_primary_key.cpp  test_boolean.cpp  test_boolean_conditions.cpp  test_boolean_update.cpp  test_cache.cpp  test_create_index.cpp  test_create_table.cpp  test_create_table_as.cpp  test_create_table_dry.cpp  test_create_view_as.cpp  test_delete_from.cpp  test_dynamic_type.cpp  test_enum_crosstable.cpp  test_enum_lookup.cpp  test_enum_namespace.cpp  test_error_handling.cpp  test_foreign_key.cpp  test_full_join.cpp  test_group_by.cpp  test_group_by_with_operations.cpp  test_helpers.hpp  test_in.cpp  test_in_vec.cpp  test_insert_and_read.cpp  test_insert_and_read_two_tables.cpp  test_insert_fail.cpp  test_insert_or_ignore_dry.cpp  test_insert_or_replace.cpp  test_insert_returning_dry.cpp  test_insert_returning_ids.cpp  test_is_null.cpp  test_join.cpp  test_joins_from.cpp  test_joins_nested.cpp  test_joins_nested_grouped.cpp  test_joins_two_tables.cpp  test_joins_two_tables_grouped.cpp  (+36 more)
tests/postgres/: CMakeLists.txt  test_aggregations.cpp  test_aggregations_with_nullable.cpp  test_auto_incr_primary_key.cpp  test_boolean.cpp  test_boolean_conditions.cpp  test_boolean_update.cpp  test_cache.cpp  test_create_index.cpp  test_create_index_where.cpp  test_create_materialized_view_as.cpp  test_create_table.cpp  test_create_table_as.cpp  test_create_view_as.cpp  test_delete_from.cpp  test_dynamic_type.cpp  test_enum_crosstable.cpp  test_enum_lookup.cpp  test_enum_namespace.cpp  test_error_handling.cpp  test_execute_params.cpp  test_foreign_key.cpp  test_full_join.cpp  test_group_by.cpp  test_group_by_with_operations.cpp  test_helpers.hpp  test_in.cpp  test_in_vec.cpp  test_insert_and_read.cpp  test_insert_and_read_two_tables.cpp  test_insert_fail.cpp  test_insert_or_ignore_dry.cpp  test_insert_or_replace.cpp  test_insert_returning_dry.cpp  test_insert_returning_ids.cpp  test_is_null.cpp  test_join.cpp  (+45 more)
(+266 files in other folders)
